2003-06-19  Dan Winship  <danw@ximian.com>

	* e-xml-hash-utils.c (e_xml_to_hash): don't leak an extra copy of
	the values

2003-06-14  Larry Ewing  <lewing@ximian.com>

	* e-name-western.c (e_name_western_get_suffix_at_str_end): free
	word before breaking out of the loop.

2003-06-12  Rodrigo Moya <rodrigo@ximian.com>

	* e-config-listener.c (add_key): use GCONF_CLIENT_PRELOAD_RECURSIVE
	when adding watched directories to avoid GConfd round-trips.

2003-06-12  Jeffrey Stedfast  <fejj@ximian.com>

	* e-trie.c (e_trie_free): Free the fail_states array.

2003-05-30  Jeffrey Stedfast  <fejj@ximian.com>

	* e-meta.c (meta_load): Stat the file to make sure it exists
	before trying to parse it using xmlParseFile().
