@@ -1,3 +1,9 @@
+2003-07-01  Dan Winship  <danw@ximian.com>
+
+	* e-gui-utils.c (e_icon_for_mime_type): New function to return an
+	icon for a MIME type, using GnomeIconTheme if available or
+	gnome-vfs and gnome-mime-data if not.
+
 2003-06-19  Dan Winship  <danw@ximian.com>
 
 	* e-xml-hash-utils.c (e_xml_to_hash): don't leak an extra copy of
